<resources>
    <string name="app_name">Framming</string>
    <string name="sinopse">Unpopular best friends PJ and Josie start a high school fight club to meet girls and lose their virginity. They soon find themselves in over their heads when the most popular students start beating each other up in the name of self-defense. Unpopular best friends PJ and Josie start a high school fight club to meet girls and lose their virginity. They soon find themselves in over their heads when the most popular students start beating each other up in the name of self-defense.</string>
    <string name="genero">COMÉDIA</string>
    <string name="classificacao">16 ANOS</string>
    <string name="situacao">EM CARTAZ</string>
    <string name="visualicao">2.589</string>
    <string name="querover">QUERO VER</string>
    <string name="adddiario">ADICIONAR AO DIÁRIO</string>
    <string name="escritica">ESCREVER CRÍTICA</string>
    <string name="snota">DAR NOTA</string>
    <string name="ano">2023</string>
    <string name="bola">•</string>
    <string name="duracao">92min</string>
    <string name="login">LOGIN</string>
    <string name="cadastro">CADASTRO</string>
    <string name="slogan">Enquadrando emoções!</string>
    <string name="media">3.5</string>
    <string name="horarioesessoes">SESSÕES</string>
    <string name="criticas">CRÍTICAS</string>
    <string name="sessaodata">24/08 \n QUI</string>
    <string name="alterep">Altere o poster</string>
    <string name="pesquisaf">Pesquise um filme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escrevacritica">Escreva sua crítica</string>
    <string name="escrecr">Escreva aqui sua crítica para o filme!</string>
    <string name="salvar">SALVAR</string>
    <string name="data">Data</string>
    <string name="suanota">Nota</string>
    <string name="criticauser">Crítica do usuário</string>
    <string name="nomeuser">name_user</string>
    <string name="sloganhome">Comece sua aventura pelo mundo cinematográfico!</string>
    <string name="pesquisahome">Pesquise seu filme</string>

    <string name="formpag">Forma de Pagamento</string>
    <string name="escolha">Escolha sua forma de pagamento:</string>
    <string name="cartao">Cartão de Crédito</string>
    <string name="cartao2">Cartão de Débito</string>
    <string name="cartao3">Pix</string>
    <string name="ler">Ler Cartão</string>
    <string name="numcarta">Número do Cartão</string>
    <string name="Nomeimpre">Nome impresso no Cartão</string>
    <string name="cpfti">CPF do titular</string>
    <string name="vali">Validade</string>
    <string name="cvv">CVV</string>
    <string name="salvarcart">Salvar cartão para próximas compras</string>
    <string name="credito">Cartão de Crédito</string>
    <string name="pix1">Unidade consumidora</string>
    <string name="pix2">1/58966-9 (FRAMING LTDA)</string>
    <string name="pix3">Referência</string>
    <string name="pix4">Setembro/2023</string>
    <string name="pix5">Vencimento</string>
    <string name="pix6">07/05/2023</string>
    <string name="pix7">Valor</string>
    <string name="pix8">R$ 51,66</string>
    <string name="pix9">PIX Copia e Cola</string>
    <string name="pix10">Pagar com o QR CODE</string>
    <string name="pix11">Pix</string>
    <string name="fim">Finalizar Pagamento</string>
    <string name="copia">CÓDIGO COPIADO</string>
    <string name="copia2">Abra o aplicativo do seu banco e realize o pagamento</string>
    <string name="copia3">OK</string>
    <string name="copia4">Copie ou Escaneie o QR CODE</string>
    <string name="copia5">Ao copiar o código, abra o aplicativo do seu banco e realize seu pagamento</string>
    <string name="copia6">Copiar Código</string>
    <string name="copia7">FECHAR</string>
    <string name="email">Email</string>
    <string name="telefone">Celular</string>
    <string name="senhaes">Esqueceu sua senha?</string>
    <string name="senha">Senha</string>
    <string name="bomba">Cadastre-se </string>
    <string name="senha2">Não tem uma conta? Cadastre-se</string>
    <string name="entrar">Entrar </string>
    <string name="senhaa">Entrar</string>
    <string name="cad1">Nome</string>
    <string name="cad2">Nome de usuário</string>
    <string name="cad3">Email</string>
    <string name="cad4">Senha</string>
    <string name="cad5">Confirme sua senha</string>
    <string name="cad6">Cadastrar</string>
    <string name="cad7">Já possui uma conta? Faça o login</string>
    <string name="tipo">Tipo do Ingresso</string>
    <string name="seuperfil">Seu perfil</string>
    <string name="filmesfavoritados">Filmes favoritos</string>
    <string name="suaatvrec">Sua atividade recente</string>
    <string name="diario">Diário</string>
    <string name="cading">Caderno Ingressos</string>
    <string name="listas">Listas</string>
    <string name="querov">Quero Ver</string>
    <string name="pontos">Pontos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="seuspontos">Seus pontos</string>
    <string name="qtdpontos">Você possui qtd_pontos pontos</string>
    <string name="recompensas">Recompensas ></string>
    <string name="seusresg">Seus resgates ></string>
    <string name="nomecin">Espaço Itáu de Cinema - Pompéia</string>
    <string name="tiposes">IMAX 2D</string>
    <string name="audses">LEG</string>
    <string name="horses">14:00</string>
    <string name="numsala">Sala: 06</string>
    <string name="detses">Quinta-Feira - 26/05/23 - 17:00</string>
    <string name="tiping">Tipo do Ingresso</string>
    <string name="inteira">Inteira</string>
    <string name="precoing">R$ 50,16</string>
    <string name="precotot">PROSSEGUIR</string>
    <string name="filmesnac">Filmes nacionais em destaque</string>
    <string name="seudiario">Seu diário</string>
    <string name="darnota">Dar nota</string>
    <string name="fav1">Adicionar primeiro favorito</string>
    <string name="suanotamain">SUA NOTA</string>
    <string name="querovermin">Quero ver</string>
    <string name="fav2">Adicionar segundo favorito</string>
    <string name="msgfilmecritica">Parece que este filme ainda\n não possui críticas</string>
    <string name="msgfilmeperfil">Parece que você ainda\n não marcou seus favoritos</string>
    <string name="msgfilmeperfil2">Parece que você ainda\n não criou críticas</string>
    <string name="cartoes">Cartões</string>
    <string name="confcpf">Por favor, confirme seu CPF</string>
    <string name="txtcpf">Confirmação CPF</string>
    <string name="cartoessalvos">Cartões salvos</string>
    <string name="selcartao">Selecione um cartão para\n proseguir a compra:</string>
    <string name="cadastrecard">Cadastre um novo cartão</string>
    <string name="numcardconf">Por favor, confirme o número do cartão</string>
    <string name="txtnumcard">Confirmação número cartão</string>
    <string name="slistas">Suas listas</string>
    <string name="criarlist">Criar nova lista</string>
    <string name="nomeLista">Digite um nome para sua lista</string>
    <string name="erroconexao">Parece que tivemos um problema.\n Não entre em PÂNICO,\n tente novamente mais tarde!</string>
    <string name="editarusua">Editar usuário</string>
    <string name="confalt">Confirmar alterações</string>
    <string name="excuser">Excluir usuário</string>
    <string name="errolista">Parece que esta lista ainda não tem filmes,\n tente adicionar algum e volte depois!</string>
    <string name="seusingressos">Seus ingressos</string>
    <string name="ultcriticas">Últimas críticas</string>

</resources>

