<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundologin"
    tools:context=".creditoActivity">



    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_voltar_100" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menupag" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/cartao2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/cpfti"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/vali"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="130dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/cvv"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:text="@string/Nomeimpre"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="350dp"
        android:layout_height="63dp"
        android:background="@drawable/buttonpag"
        android:drawableEnd="@drawable/cartaocredito"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:paddingEnd="15dp"
        android:text="@string/numcarta"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />


    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="361dp"
        android:layout_height="32dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/salvarcart"
        android:textColor="@color/white"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <Button
        android:id="@+id/button5"
        android:layout_width="242dp"
        android:layout_height="55dp"
        android:backgroundTint="#FF6666"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/fim"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

</androidx.constraintlayout.widget.ConstraintLayout>